tests/fixtures/negative/naming/InnerClassesMustBeOneWord.cls
public class Example {
    // Violation: Inner class with underscore
    public class Inner_Class {
    }

    // Violation: Inner class with multiple words (PascalCase)
    public class InnerClassName {
    }

    // Violation: Inner class with multiple words
    public class MyInnerClass {
    }
}

